--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "init": "^0.1.2",
+    "md5": "^2.3.0",
     "mongoose": "^7.4.1",
     "mongoose-encryption": "^2.1.2",
     "mongoose-field-encryption": "^7.0.1",
-    "npm": "^9.8.1"
+    "npm": "^9.8.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "name": "secrets---starting-code",
   "version": "1.0.0",
